[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Fonts/default_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://Assets/Fonts/smaller_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Scripts/ShipHold.gd" type="Script" id=3]

[node name="ShipHold" type="Node2D"]
script = ExtResource( 3 )
part_name = "Hold"
status = 34

[node name="NameLabel" type="Label" parent="."]
visible = false
margin_right = 120.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 1 )
text = "Hold"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatusLabel" type="Label" parent="."]
margin_left = 120.0
margin_right = 240.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 2 )
text = "food rations: 34"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckButton" type="Button" parent="."]
margin_left = 355.0
margin_top = 5.0
margin_right = 445.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 2 )
text = "Check"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 40.0
margin_top = 10.0
margin_right = 80.0
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CheckButton" to="." method="check_status"]
